comentario en branch

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Este es un ejercicio para guardar en git</h1>
+    <p>este es un comentario que estoy poniendo en la branch cambios-1</p>
 </body>
 </html>
